# Advanced-Multi-Agent-Intelligence-System

./: .analysis-policy.yml  .ci-trigger  .cursorrules  .editorconfig  .env  .env.example  .env.offline  .env.template  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .workflow-consolidation-complete.md  00_START_HERE.md  100_PERCENT_COMPLETE_SUMMARY.md  16_API_KEYS_COMPLETE_INTEGRATION.md  9_API_SYSTEM_COMPLETE.md  ACCESS_FULL_DASHBOARD.md  ACCURATE_FINAL_TEST_REPORT.txt  ADVANCED_MULTI_AGENT_SYSTEM_COMPLETE.md  AGENT_COMMUNICATION_PROTOCOL_COMPLETE.md  AGENT_ENHANCEMENTS_COMPLETE.md  AI_AGENTS_NOW_WORKING.md  AI_ANALYSIS_CODE_VISIBILITY_RESPONSE.md  AI_ANALYSIS_DIFF_TRUNCATION_RESPONSE.md  AI_ANALYSIS_FALSE_POSITIVES_COMPREHENSIVE_RESPONSE.md  AI_ANALYSIS_FIXES_APPLIED.md  AI_ANALYSIS_ISSUES_RESOLVED.md  AI_ANALYSIS_RESPONSE.md  AI_ANALYSIS_SMART_RESPONSE.md  AI_INTEGRATION_README.md  AI_POWERED_UPGRADE_SYSTEM_SUMMARY.md  AI_SECURITY_IMPROVEMENTS.md  AI_WORKFLOW_MASTER_IMPLEMENTATION.md  AI_WORKFLOW_STATUS_REPORT.md  ALL_CONFLICTS_RESOLVED_FINAL.md  ALL_ERRORS_FIXED.md  ALL_ERRORS_FIXED_COMPREHENSIVE.txt  ALL_ERRORS_FIXED_SUMMARY.md  ALL_FAILING_ACTIONS_FIXED_SUMMARY.md  (+745 more)
${AUDIT_LOG_FILE-logs/: audit.jsonl}
.devcontainer/: BUILD_FIX.md  COMPOSE_TO_DIRECT_FIX.md  Dockerfile  FEATURES_OPTIONAL.md  FIXES_APPLIED.md  README.md  START_CONTAINER.md  START_FIX.md  TEST_RESULTS.md  TROUBLESHOOTING.md  devcontainer-simple.json  devcontainer.json  docker-compose.yml  env.example  fix-ports.sh  post-create.sh  set-amas-ports.ps1  set-amas-ports.sh  setup.sh  start-backend-test.sh  start-backend.sh  test-backend.sh  validate-config.sh
.github/: AI_POWERED_PROJECT_UPGRADE_SYSTEM.md  AI_WORKFLOW_DOCUMENTATION.md  COMPLETE_AI_WORKFLOW_SYSTEM.md  COMPREHENSIVE_AI_WORKFLOW_GUIDE.md  EXAMPLE_RESPONSES.md  FILES_INDEX.md  QUICK_START_GUIDE.md  README_IMPLEMENTATION.md  SECURITY_FALSE_POSITIVE_FINAL_RESPONSE.md  SECURITY_FALSE_POSITIVE_RESPONSE.md  markdown-link-check-config.json  security-scan-config.json
AMAS PROJECT DEFINITIVE PRODUCTION IMPLEMENTATION GUIDE/: COMPREHENSIVE FINAL SUMMARY.md  INDEX.MD  PART_1.md  PART_2.MD  PART_3.MD  PART_4.MD  PART_5.MD  PART_6.MD  PART_7.MD  PART_8.MD  PART_9_&_10.MD
AMAS_AGENT_TOOLS/: AMAS_Quick_Ref_v3.0.md  AMAS_Ultimate_v3.0.md
BRAND_ASSETS/: color_system.md  logo_variations.md
VPS/: CRITICAL_FIX_SUMMARY.md  FINAL_SOLUTION_SUMMARY.md  HYBRID_WORKING_SOLUTION.md  INSTALLATION_METHODS.md  LOCALTONET_TUNNELING_FIX.md  QUICK_MANUAL_INSTALL.sh  README_HYBRID_SOLUTION.md  backend_health_check.sh  deploy_fixed_redirector.sh  deploy_hybrid_redirector.sh  l4_redirector_v3_fixed_tunneling.py  l4_redirector_v3_hybrid_working.py  validate_hybrid_deployment.sh
Windows/: backend_api_v3_final_working.py  quick_migrate_to_v3_fixed.ps1
agenticseek/: Dockerfile  requirements.txt
agents/: agentic_rag.py  n8n_integration.py  orchestrator.py  prompt_maker.py
alembic/: env.py
all_results/: learning_adaptation.json
amas-intelligence/: requirements-intelligence.txt  requirements.txt
analysis_results/: improvement_generation.json
api/: __init__.py  enhanced_main.py  main.py  websocket_handler.py
artifacts/: bulletproof_analysis_report.md  bulletproof_real_ai_analysis_example.md  enhanced_code_review_report.md  fake_ai_elimination_results.json  incident_response_report.md  master_orchestration_report.md  osint_report.md  prompt_improvement_report.md  real_code_quality_analysis.json  threat_intelligence_report.md  verification_results.json
backup_20251013_013428/: pyproject.toml  setup.py
ci/: trigger.txt
comprehensive_reports_20251011_004538/: FINAL_COMPREHENSIVE_TEST_REPORT.txt  MASTER_SUMMARY_REPORT.txt  api_key_migration_test.txt  audit_output.txt  audit_results.json  audit_system_test.txt  focused_test_output.txt  python_syntax_test.txt  security_test.txt  test_audit_results.json  test_suite_output.txt  workflow_execution_output.txt  workflow_integrity_test.txt  yaml_syntax_test.txt
comprehensive_reports_20251011_005953/: MASTER_SUMMARY_REPORT.txt  README.txt  api_key_migration_test.txt  audit_output.txt  audit_results.json  focused_test_output.txt  security_test.txt  test_audit_results.json  test_suite_output.txt  workflow_execution_output.txt  yaml_syntax_test.txt
config/: agent_capabilities.yaml  ai_config.py  amas_config.yaml  intelligence.json  interactive_config.json  security_config.yaml  slo_definitions.yaml
core/: __init__.py  cognitive_orchestrator.py  orchestrator.py  reasoning_engine.py  state_manager.py  workflow_engine.py
docker/: Dockerfile  Dockerfile.api  Dockerfile.vector  entrypoint.sh  vector_service.py
docs/: ADVANCED_API_MANAGER_INTEGRATION_GUIDE.md  AGENT_CONTRACTS_AND_TOOL_GOVERNANCE.md  AGENT_CONTRACTS_DOCUMENTATION_INDEX.md  AGENT_CONTRACTS_USAGE_GUIDE.md  AGENT_TOOL_CONFIGURATION_FIX.md  AGENT_TOOL_CONFIGURATION_SYSTEM.md  AI-POWERED-WORKFLOW-CONSOLIDATION.md  AI-WORKFLOW-QUICKSTART.md  AI_AGENTIC_INTEGRATION_EXAMPLES.md  AI_AGENTIC_TROUBLESHOOTING.md  AI_AGENTIC_WORKFLOW_GUIDE.md  AI_AGENTIC_WORKFLOW_SHOWCASE.md  AI_ANALYSIS_CORRECTED_RESPONSE.md  AI_ANALYSIS_CORRECTED_RESPONSE_V2.md  AI_ANALYSIS_CORRECTED_RESPONSE_V3.md  AI_ANALYSIS_CORRECTED_RESPONSE_V4.md  AI_ANALYSIS_FORMAT_IMPROVEMENTS.md  AI_ANALYSIS_IMPROVED_FORMAT.md  AI_PROVIDERS.md  AI_PROVIDERS_GUIDE.md  AI_RELEASE_SYSTEM.md  AI_RELEASE_SYSTEM_DETAILED.md  ALL_TOOLS_IMPLEMENTATION_COMPLETE.md  AMAS_COMPLETE_FREE_AGENT_ANALYSIS.md  AMAS_INTERACTIVE_GUIDE.md  API_DOCUMENTATION.md  API_DOCUMENTATION_UPDATED.md  API_MANAGER_GUIDE.md  API_REFERENCE.md  ARCHITECTURE_COMPLETE.md  ASSETS_QUICK_START.md  ASSET_IDENTIFICATION_REFERENCE.txt  BRANDING_AND_ASSETS.md  BULLETPROOF_AI_ANALYZER_FINAL_FIXES.md  BULLETPROOF_AI_ANALYZER_TEST_REPORT.md  BULLETPROOF_AI_IMPLEMENTATION_SUMMARY.md  BULLETPROOF_AI_SYSTEM_COMPLETE.md  BULLETPROOF_AI_SYSTEM_README.md  CAPABILITIES_COMPLETE.md  CHANGELOG.md  (+102 more)
examples/: api_manager_usage.py  basic_orchestration.py  code_generation.py  governance_example.py  interactive_examples.py  minimal_example.py  (+5 more)
(+1372 files in other folders)
